; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_als300.c_snd_als300_set_irq_flag.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_als300.c_snd_als300_set_irq_flag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_als300 = type { i32, i64, i32 }

@MISC_CONTROL = common dso_local global i32 0, align 4
@DEVICE_ALS300_PLUS = common dso_local global i64 0, align 8
@IRQ_ENABLE = common dso_local global i32 0, align 4
@IRQ_SET_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_als300*, i32)* @snd_als300_set_irq_flag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_als300_set_irq_flag(%struct.snd_als300* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_als300*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.snd_als300* %0, %struct.snd_als300** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.snd_als300*, %struct.snd_als300** %3, align 8
  %7 = getelementptr inbounds %struct.snd_als300, %struct.snd_als300* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @MISC_CONTROL, align 4
  %10 = call i32 @snd_als300_gcr_read(i32 %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = call i32 (...) @snd_als300_dbgcallenter()
  %12 = load %struct.snd_als300*, %struct.snd_als300** %3, align 8
  %13 = getelementptr inbounds %struct.snd_als300, %struct.snd_als300* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp sgt i32 %14, 5
  br i1 %15, label %22, label %16

16:                                               ; preds = %2
  %17 = load %struct.snd_als300*, %struct.snd_als300** %3, align 8
  %18 = getelementptr inbounds %struct.snd_als300, %struct.snd_als300* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @DEVICE_ALS300_PLUS, align 8
  %21 = icmp eq i64 %19, %20
  br label %22

22:                                               ; preds = %16, %2
  %23 = phi i1 [ true, %2 ], [ %21, %16 ]
  %24 = zext i1 %23 to i32
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @IRQ_ENABLE, align 4
  %27 = icmp eq i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = xor i32 %24, %28
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %22
  %32 = load i32, i32* @IRQ_SET_BIT, align 4
  %33 = load i32, i32* %5, align 4
  %34 = or i32 %33, %32
  store i32 %34, i32* %5, align 4
  br label %40

35:                                               ; preds = %22
  %36 = load i32, i32* @IRQ_SET_BIT, align 4
  %37 = xor i32 %36, -1
  %38 = load i32, i32* %5, align 4
  %39 = and i32 %38, %37
  store i32 %39, i32* %5, align 4
  br label %40

40:                                               ; preds = %35, %31
  %41 = load %struct.snd_als300*, %struct.snd_als300** %3, align 8
  %42 = getelementptr inbounds %struct.snd_als300, %struct.snd_als300* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* @MISC_CONTROL, align 4
  %45 = load i32, i32* %5, align 4
  %46 = call i32 @snd_als300_gcr_write(i32 %43, i32 %44, i32 %45)
  %47 = call i32 (...) @snd_als300_dbgcallleave()
  ret void
}

declare dso_local i32 @snd_als300_gcr_read(i32, i32) #1

declare dso_local i32 @snd_als300_dbgcallenter(...) #1

declare dso_local i32 @snd_als300_gcr_write(i32, i32, i32) #1

declare dso_local i32 @snd_als300_dbgcallleave(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
